fix gap appearing on portfolio cards on extra large screens noticed by team

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -451,7 +451,6 @@ html {
           box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1);
           display: flex;
           flex-direction: column;
-          justify-content: center;
           background-color: rgba(0, 0, 0, 0.7);
           transition: transform 0.3s ease, filter 0.3s ease,
             box-shadow 0.3s ease;
